--- a/src/Ticket.css
+++ b/src/Ticket.css
@@ -39,7 +39,7 @@
 
 .image {
     flex: 1;
-    background-image: url("CFL_AD.png");
+    background-image: url("/CFL_AD.png");
     background-size: cover;
     background-position: center;
     opacity: 0.85;
