--- a/src/SocialBar.css
+++ b/src/SocialBar.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: center; /* Center horizontally */
     justify-content: center; /* Center vertically */
-    margin-left: 2%;
 
 }
 
@@ -16,8 +15,9 @@
     padding: 10em;
     transform: translate(-50%, -50%);
     display: flex;
-    margin-top: 10em;
-    margin-left: 1em;
+    margin-top: 25%;
+    margin-left: 20%;
+    margin-right: auto;
 
 }
 
