--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@
 }
 
 body, html {
-  height: 125%;
+  height: 100%;
+  max-width: 100%;
   display: grid;
   font-family: "Staatliches", cursive;
   color: white;
