--- a/index.css
+++ b/index.css
@@ -1,7 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
+
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.image-container .animate-scroll {
+    display: flex;
+    animation: scroll 10s linear infinite;
+}
+
 
 *{
     margin: 0px;
@@ -10,6 +26,7 @@
 
 body{
     font-family: 'Exo', sans-serif;
+    background: #000;
 }
 
 
@@ -27,14 +44,6 @@ body{
 }
 
 
-.area{
-    background: #4e54c8;
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-    width: 100%;
-    height:100vh;
-
-
-}
 
 .circles{
     position: absolute;
